# adieu-backend

./: .env  .env.template  Cargo.toml  flake.nix  justfile  typeshare.toml
migrations/: 20241222004718_create_initial_tables.sql
src/: game.rs  main.rs  words.json
src/game/: db.rs  dictionary.rs  handlers.rs  types.rs
